--- a/dasboarduptime/package.json
+++ b/dasboarduptime/package.json
@@ -18,6 +18,7 @@
     "http-server": "^0.12.0",
     "install": "^0.10.4",
     "json2csv": "^3.11.5",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "npm": "^5.10.0",
     "tabletojson": "^0.6.0",
