--- a/uptime-api/package.json
+++ b/uptime-api/package.json
@@ -1,31 +1,41 @@
 {
-  "name": "uptimeapi",
+  "name": "my-uptime-version-api",
   "version": "1.0.0",
-  "description": "Api Uptime",
-  "main": "dist/server.js",
+  "description": "Uptime API",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node ./lib/server.ts",
-    "start": "nodemon ./dist/server.ts",
-    "prod": "npm run build && npm run start"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon",
+    "build": "tsc"
   },
-  "author": "Hugo Guillouet",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.16.1",
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.3.6",
+    "@types/moment-timezone": "^0.5.12",
+    "@types/node-cron": "^2.0.2",
+    "axios": "^0.19.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "crypto-js": "^3.1.9-1",
     "dotenv": "^8.2.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
+    "express-validator": "^6.3.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.26",
-    "mongoose": "^5.4.7",
-    "node-cron": "^2.0.3",
-    "nodemailer": "^5.1.1",
-    "nodemon": "^1.18.9",
-    "ts-node": "^8.0.2",
-    "typescript": "^3.2.4"
+    "moment-timezone": "^0.5.27",
+    "mongoose": "^5.8.1",
+    "node-cron": "^2.0.3"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.17.1",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.5.34",
+    "@types/node": "^12.12.20",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.3"
   }
 }
