--- a/uptime-api/tsconfig.json
+++ b/uptime-api/tsconfig.json
@@ -1,17 +1,14 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "pretty": true,
-        "sourceMap": true,
-        "target": "es6",
-        "outDir": "./dist",
-        "baseUrl": "./lib"
-    },
-    "include": [
-        "lib/**/*.ts"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
-}
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "outDir": "./dist",
+    "resolveJsonModule": true,
+    "strict": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    },                         
+    "exclude": ["node_modules"], 
+    "include": ["./src/**/*.tsx", "./src/**/*.ts", "api.constants.ts"]
+  }
