--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -53,9 +53,9 @@ jobs:
       uses: wei/curl@v1.1.1
       if: github.ref == 'refs/heads/master'
       with:
-        args: -X POST ${{ secrets.PORTAINER_DASHBOARDAPI_MAIN_WEBHOOK }}?tag=latest-${GITHUB_SHA::8}
+        args: -X POST ${{ secrets.PORTAINER_DASHBOARDAPI_MAIN_WEBHOOK }}?tag=main-${GITHUB_SHA::8}
     - name: Redeploy dasboard remote service
       uses: wei/curl@v1.1.1
       if: github.ref == 'refs/heads/master'
       with:
-        args: -X POST ${{ secrets.PORTAINER_DASHBOARDAPI_REMOTE_WEBHOOK }}?tag=latest-${GITHUB_SHA::8}
+        args: -X POST ${{ secrets.PORTAINER_DASHBOARDAPI_REMOTE_WEBHOOK }}?tag=remote-${GITHUB_SHA::8}
