--- a/dasboarduptime/Dockerfile
+++ b/dasboarduptime/Dockerfile
@@ -18,6 +18,7 @@ RUN npm install
 COPY . .
 
 RUN npm run build
+COPY ./dist/index.html ./dist/404.html
 
 EXPOSE 8080
 CMD [ "./node_modules/.bin/http-server", "./dist" ]
